--- a/index.html
+++ b/index.html
@@ -116,16 +116,27 @@
       </div>
     </section>
 
-    <script src="./main.js">
-          const loader = document.querySelector(".loader");
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const images = document.querySelectorAll(".background-slider__image");
+        let currentIndex = 0;
 
-      setTimeout(() => {
-        loader.classList.add("loader--hidden");
+        function changeBackground() {
+          // Убираем активный класс у текущего изображения
+          images[currentIndex].classList.remove("active");
 
-        setTimeout(() => {
-          loader.remove();
-        }, 500);
-      }, 3000);
+          // Переходим к следующему изображению
+          currentIndex = (currentIndex + 1) % images.length;
+
+          // Добавляем активный класс новому изображению
+          images[currentIndex].classList.add("active");
+        }
+
+        // Меняем изображение каждые 5 секунд
+        setInterval(changeBackground, 5000);
+
+        images[0].classList.add("active");
+      });
     </script>
   </body>
 </html>
