--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
         </ul>
       </div>
     </header>
-    <div class="loader">
+    <!-- <div class="loader">
       <div class="loader__title">
         ALCHAKOV <br />
         BOXING CLUB
       </div>
       <div class="loader__sub-title">Твой личный тренер</div>
-    </div>
+    </div> -->
 
     <section class="hero">
       <div class="background-slider">
