--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
       <div class="loader__sub-title">Твой личный тренер</div>
     </div> -->
 
+    <!-- Главный экран  -->
     <section class="hero">
       <div class="background-slider">
         <img
@@ -116,6 +117,325 @@
       </div>
     </section>
 
+    <!-- Научим вас -->
+    <section class="learn" id="learn">
+      <div class="container">
+        <h2 class="learn__title">Научим вас</h2>
+        <div class="learn__cards">
+          <div class="card" data-animation="fade-up">
+            <div class="card__image">
+              <img
+                src="https://source.unsplash.com/400x300/?boxing"
+                alt="Бокс"
+              />
+            </div>
+            <div class="card__content">
+              <h3 class="card__title">Бокс</h3>
+              <p class="card__description">
+                Бокс — это сила, выносливость, гармония с самим собой и даже
+                отчасти философия. Бокс укрепляет волю, воспитывает смелость,
+                находчивость, умение в короткие мгновения оценить самую сложную
+                ситуацию и найти наиболее рациональный выход из трудного
+                положения.
+              </p>
+            </div>
+          </div>
+          <div class="card" data-animation="fade-up">
+            <div class="card__image">
+              <img
+                src="https://source.unsplash.com/400x300/?kickboxing"
+                alt="Кикбоксинг"
+              />
+            </div>
+            <div class="card__content">
+              <h3 class="card__title">Кикбоксинг</h3>
+              <p class="card__description">
+                Кикбоксинг – вид боевых единоборств, представляющий собой синтез
+                кулачной техники европейского бокса и техники ударов ногами,
+                заимствованной из восточных единоборств (каратэ, тайский бокс,
+                тхэквондо, и др.).
+              </p>
+            </div>
+          </div>
+          <div class="card" data-animation="fade-up">
+            <div class="card__image">
+              <img src="https://source.unsplash.com/400x300/?mma" alt="ММА" />
+            </div>
+            <div class="card__content">
+              <h3 class="card__title">ММА</h3>
+              <p class="card__description">
+                ММА (от англ. Mixed Martial Arts) – смешанные боевые
+                единоборства, представляющие собой сочетание различных техник,
+                школ и направлений единоборств. ММА является полноконтактным
+                боем с применением ударной техники и борьбы.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- форма обратной связи  -->
+    <section class="signup" id="signup">
+      <div class="container">
+        <h2 class="signup__title">Запишись на первую бесплатную тренировку!</h2>
+        <form class="signup__form" data-animation="fade-up">
+          <div class="form__group">
+            <input
+              type="text"
+              class="form__input"
+              placeholder="Ваше имя"
+              id="name"
+              required
+            />
+            <input
+              type="tel"
+              class="form__input"
+              placeholder="Ваш номер телефона"
+              id="phone"
+              required
+            />
+            <button type="submit" class="form__button">Отправить заявку</button>
+          </div>
+          <div class="form__checkbox">
+            <input type="checkbox" id="agreement" required />
+            <label for="agreement">
+              Нажимая кнопку «Отправить заявку», вы соглашаетесь с
+              <a href="/privacy-policy" class="checkbox__link"
+                >правилами обработки персональных данных</a
+              >.
+            </label>
+          </div>
+        </form>
+        <div class="signup__telegram" data-animation="fade-up">
+          <a href="https://t.me/coach_boxing" class="telegram__link">
+            <i class="fab fa-telegram-plane"></i>
+            Связаться в Telegram
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <!-- О тренерах -->
+
+    <section class="coaches" id="coaches">
+      <div class="container">
+        <h2 class="coaches__title">Вас будут тренировать</h2>
+        <div class="coaches__cards">
+          <div class="coach-card" data-animation="fade-up">
+            <div class="coach-card__image">
+              <img
+                src="https://source.unsplash.com/400x500/?boxing,coach"
+                alt="Ахмед Алчаков"
+              />
+            </div>
+            <div class="coach-card__content">
+              <h3 class="coach-card__name">Ахмед Алчаков</h3>
+              <p class="coach-card__specialty">
+                Тренер по боксу, кикбоксингу и ММА
+              </p>
+              <ul class="coach-card__achievements">
+                <li><strong>Победитель турниров по боксу</strong></li>
+                <li><strong>Бронзовый призёр мира по кикбоксингу</strong></li>
+                <li><strong>Чемпион Кубка России по кикбоксингу</strong></li>
+                <li>
+                  <strong>Многократный чемпион Москвы по кикбоксингу</strong>
+                </li>
+                <li><strong>Чемпион Москвы по К-1</strong></li>
+                <li><strong>Чемпион первенства России по дзюдо</strong></li>
+                <li><strong>Мастер спорта по жиму лёжа</strong></li>
+                <li><strong>Мастер спорта по дзюдо</strong></li>
+              </ul>
+              <p class="coach-card__education">
+                <strong>Высшее спортивное образование</strong>
+              </p>
+              <p class="coach-card__experience">
+                <strong>Тренерский стаж: 10 лет</strong>
+              </p>
+              <div class="coach-card__socials">
+                <a href="https://t.me/ahmed_coach" class="social-link"
+                  ><i class="fab fa-telegram-plane"></i
+                ></a>
+                <a href="https://instagram.com/ahmed_coach" class="social-link"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+                <a href="https://vk.com/ahmed_coach" class="social-link"
+                  ><i class="fab fa-vk"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="coach-card" data-animation="fade-up">
+            <div class="coach-card__image">
+              <img
+                src="https://source.unsplash.com/400x500/?kickboxing,athlete"
+                alt="Артур Алчаков"
+              />
+            </div>
+            <div class="coach-card__content">
+              <h3 class="coach-card__name">Артур Алчаков</h3>
+              <p class="coach-card__specialty">Тренер по боксу, кикбоксингу</p>
+              <ul class="coach-card__achievements">
+                <li><strong>Призёр турниров по кикбоксингу и боксу</strong></li>
+                <li>
+                  <strong>Победитель первенств турниров по кикбоксингу</strong>
+                </li>
+                <li>
+                  <strong>Победитель первенства Москвы по кикбоксингу</strong>
+                </li>
+                <li>
+                  <strong>Победитель различных соревнований по дзюдо</strong>
+                </li>
+                <li><strong>Действующий спортсмен</strong></li>
+              </ul>
+              <p class="coach-card__education">
+                <strong>Высшее спортивное образование</strong>
+              </p>
+              <p class="coach-card__experience">
+                <strong>Тренерский стаж: более 7 лет</strong>
+              </p>
+              <div class="coach-card__socials">
+                <a href="https://t.me/artur_coach" class="social-link"
+                  ><i class="fab fa-telegram-plane"></i
+                ></a>
+                <a href="https://instagram.com/artur_coach" class="social-link"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+                <a href="https://vk.com/artur_coach" class="social-link"
+                  ><i class="fab fa-vk"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="pricing" id="pricing">
+      <div class="container">
+        <h2 class="pricing__title">Выберите тип занятий</h2>
+        <h3 class="pricing__subtitle">Наш прайс</h3>
+        <p class="pricing__intro">
+          Стандартные тренировки по кикбоксингу, боксу и ММА для взрослых
+        </p>
+        <div class="pricing__cards">
+          <div class="price-card" data-animation="fade-up">
+            <h4 class="price-card__title">Мини-группа</h4>
+            <p class="price-card__price">10 000 руб.</p>
+            <p class="price-card__description">
+              В стоимость обучения входит: 8 — 12 персональных тренировок по 2
+              часа, уроки в группах по 4 — 6 человека, расписание согласованное
+              с тренером. Примерная тренировка: разминка, работа на лапах с
+              тренером, постановка удара, разучивание комбинаций, работа на
+              мешках, бой с тенью, спарринг (по желанию), и в конце набор
+              общеукрепляющих упражнений.
+            </p>
+            <a href="#signup" class="price-card__button">Записаться</a>
+          </div>
+          <div class="price-card" data-animation="fade-up">
+            <h4 class="price-card__title">Детские группы</h4>
+            <p class="price-card__price">4 000 руб.</p>
+            <p class="price-card__description">
+              В стоимость обучения входит: 12 тренировок по 1,5 часа в месяц,
+              занятия в группах по 10 - 20 человек со спортсменами-ровесниками,
+              расписание согласованное с тренером, возможность перенести
+              тренировку на другой день и время. Примерная тренировка для
+              начинающих: разминка, работа в парах, постановка удара,
+              разучивание комбинаций, работа на мешках, бой с тенью, спарринг
+              (по желанию), и в конце набор общеукрепляющих упражнений.
+            </p>
+            <a href="#signup" class="price-card__button">Записаться</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const cards = document.querySelectorAll("[data-animation]");
+        const checkVisibility = () => {
+          cards.forEach((card) => {
+            const rect = card.getBoundingClientRect();
+            if (
+              rect.top < window.innerHeight * 0.8 &&
+              !card.classList.contains("animated")
+            ) {
+              card.classList.add("animated");
+            }
+          });
+        };
+        window.addEventListener("scroll", checkVisibility);
+        checkVisibility();
+      });
+    </script> -->
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__inner">
+          <div class="footer__contacts" data-animation="fade-up">
+            <h3 class="footer__logo">Alchakov Boxing</h3>
+            <p class="footer__address">
+              Москва, улица Краснобогатырская, д. 89с3<br />
+              <a
+                href="https://yandex.ru/navigator/?whatshere[point]=37.700008,55.812297"
+                target="_blank"
+                class="footer__link"
+                >Построить маршрут</a
+              >
+            </p>
+            <p class="footer__parking">Парковка бесплатная</p>
+            <p class="footer__access">
+              В клубе действует пропускная система.<br />
+              Пожалуйста, перед выездом согласуйте с тренером время приезда в
+              клуб.
+            </p>
+            <p class="footer__phone">
+              <a href="tel:+79266010077" class="footer__link"
+                ><i class="fas fa-phone"></i> +7 926 601-00-77</a
+              >
+            </p>
+            <p class="footer__email">
+              <a href="mailto:ahmed.alchakov@mail.ru" class="footer__link"
+                ><i class="fas fa-envelope"></i> ahmed.alchakov@mail.ru</a
+              >
+            </p>
+          </div>
+          <div class="footer__nav" data-animation="fade-up">
+            <h4 class="footer__subtitle">Навигация</h4>
+            <ul class="footer__nav-list">
+              <li><a href="#about" class="footer__link">О клубе</a></li>
+              <li><a href="#programs" class="footer__link">Программы</a></li>
+              <li><a href="#coaches" class="footer__link">Тренеры</a></li>
+              <li><a href="#contacts" class="footer__link">Контакты</a></li>
+            </ul>
+          </div>
+          <div class="footer__socials" data-animation="fade-up">
+            <h4 class="footer__subtitle">Следите за нами</h4>
+            <div class="footer__social-links">
+              <a href="https://t.me/alchakov_boxing" class="footer__social-link"
+                ><i class="fab fa-telegram-plane"></i
+              ></a>
+              <a
+                href="https://instagram.com/alchakov_boxing"
+                class="footer__social-link"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a
+                href="https://vk.com/alchakov_boxing"
+                class="footer__social-link"
+                ><i class="fab fa-vk"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="footer__bottom">
+          <p class="footer__copyright" data-animation="fade-up">
+            &copy; 2025 Alchakov Boxing. Все права защищены.
+          </p>
+        </div> -->
+      </div>
+    </footer>
+
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const images = document.querySelectorAll(".background-slider__image");
@@ -136,6 +456,69 @@
         setInterval(changeBackground, 5000);
 
         images[0].classList.add("active");
+
+        const cards = document.querySelectorAll(".card[data-animation]");
+
+        const checkVisibility = () => {
+          cards.forEach((card) => {
+            const rect = card.getBoundingClientRect();
+            if (
+              rect.top < window.innerHeight * 0.8 &&
+              !card.classList.contains("animated")
+            ) {
+              card.classList.add("animated");
+            }
+          });
+        };
+
+        window.addEventListener("scroll", checkVisibility);
+        checkVisibility(); // Проверка при загрузке
+
+        const animatedElements = document.querySelectorAll("[data-animation]");
+        const checkVisibilityInput = () => {
+          animatedElements.forEach((el) => {
+            const rect = el.getBoundingClientRect();
+            if (
+              rect.top < window.innerHeight * 0.8 &&
+              !el.classList.contains("animated")
+            ) {
+              el.classList.add("animated");
+            }
+          });
+        };
+        window.addEventListener("scroll", checkVisibilityInput);
+        checkVisibilityInput();
+
+        const coutchCards = document.querySelectorAll("[data-animation]");
+        const checkVisibilityCard = () => {
+          cards.forEach((card) => {
+            const rect = card.getBoundingClientRect();
+            if (
+              rect.top < window.innerHeight * 0.8 &&
+              !card.classList.contains("animated")
+            ) {
+              card.classList.add("animated");
+            }
+          });
+        };
+        window.addEventListener("scroll", checkVisibilityCard);
+        checkVisibilityCard();
+
+        const animatedElementsFooter =
+          document.querySelectorAll("[data-animation]");
+        const checkVisibilityFooter = () => {
+          animatedElementsFooter.forEach((el) => {
+            const rect = el.getBoundingClientRect();
+            if (
+              rect.top < window.innerHeight * 0.8 &&
+              !el.classList.contains("animated")
+            ) {
+              el.classList.add("animated");
+            }
+          });
+        };
+        window.addEventListener("scroll", checkVisibility);
+        checkVisibility();
       });
     </script>
   </body>
